--- a/chat-scaling-out/src/main/resources/application.yaml
+++ b/chat-scaling-out/src/main/resources/application.yaml
@@ -1,27 +1,31 @@
+
 spring:
   application:
     name: axon-chat-service
-  h2:
-    console:
-      enabled: true
-
-  datasource:
-    url: jdbc:h2:tcp://localhost:9092/mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    data-password:
-
+#  h2:
+#    console:
+#      enabled: true
 #  datasource:
-#    hikari:
-#      allow-pool-suspension: false
-#      jdbc-url: jdbc:mysql://172.16.0.99:3306/axon?rewriteBatchedStatements\=true&useUnicode=true&characterEncoding=UTF-8&useCursorFetch\=true&zeroDateTimeBehavior=convertToNull
-#      username: root
-#      password: test@Mysql2017_
-#      connection-test-query: select 1+1
-#      driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:h2:tcp://localhost:9092/mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    data-password:
+  datasource:
+    hikari:
+      allow-pool-suspension: false
+      jdbc-url: jdbc:mysql://172.16.0.99:3306/axon?rewriteBatchedStatements\=true&useUnicode=true&characterEncoding=UTF-8&useCursorFetch\=true&zeroDateTimeBehavior=convertToNull
+      username: root
+      password: test@Mysql2017_
+      connection-test-query: select 1+1
+      driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
+  rabbitmq:
+    username: rabbitmqadmin
+    password: rabbitmqadmin
+    host: 10.10.100.101
+
 eureka:
   client:
     service-url:
@@ -35,8 +39,23 @@ axon:
     spring-cloud:
       fallback-to-http-get: true
       fallback-url: /message-routing-information
+  amqp:
+    exchange: events
+  eventhandling:
+    processors:
+      summary:
+         mode: subscribing
+      messages:
+         mode: tracking
+      participants:
+         mode: subscribing
+         source: participantEvents
+
 server:
   context-path: /
+debug: false
+
+
 ---
 spring:
   profiles: peer1
